A better logging for sampling